--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -1,7 +1,8 @@
 
 .navbar{
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
+    margin-top: auto;    
 }
 .attached-top-footer{
     margin-left: 10%;
@@ -15,6 +16,16 @@
     border-radius: 10px;
     z-index: 2;
 }
+
+.attached-top-footer input{
+    width:50%;
+    height:50%;
+    border-radius: 15px;
+    padding-left: 15px;
+    border: none;
+    margin: 10px;
+}
+
 
 .fixed-buttom-footer{
     display: flex;
@@ -36,21 +47,27 @@
 }
 
 .fixed-buttom-footer div img{
-    width:50%;
-    height:50%
+    width:40%;
+    height:40%;
+    
 }
 p{
     font-size: 18px;
 }
 
-
+.fixed-buttom-footer div:nth-child(2){
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    justify-content: space-between;
+    padding:30px 0px 20px 0px;
+    align-items:center;
+}
 .fixed-buttom-footer p{
     color: white;
 }
-#quick-links{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#quick-links-1,#quick-links-2{
+    color: #ffb800;
 }
 
 
