--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -1,5 +1,5 @@
 
-.navbar{
+.footer{
     display: flex;
     flex-direction: column;
     margin-top: auto;    
@@ -56,13 +56,30 @@ p{
 }
 
 .fixed-buttom-footer div:nth-child(2){
-    display: flex;
     height: auto;
-    flex-direction: column;
     justify-content: space-between;
     padding:30px 0px 20px 0px;
     align-items:center;
 }
+.map-section{
+    justify-content: flex-start;
+    width:100%;
+    align-items: center;
+    margin-top: -30px;
+}
+
+.map-section div{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.map-section div p{
+    font-size: 14px;
+    margin: 10px;
+}
+
 .fixed-buttom-footer p{
     color: white;
 }
