--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -1,8 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-
 p{
     display: inline;
     color: #003566;
@@ -79,8 +74,7 @@ ul{
 
 .menu-items ul{
     display: flex;
-    justify-content: space-evenly;
-    height: 100%;
+    justify-content: space-around;
     align-items: center;
 }
 
