--- a/frontend/src/components/css/TeacherCard.css
+++ b/frontend/src/components/css/TeacherCard.css
@@ -1,16 +1,44 @@
 .teacher-card{
     display:flex;
     flex-direction: column;
-    justify-content:center;
-    align-items:center;
+    justify-content: flex-start;
+    align-items: center;
     height:250px;
     width:250px;
-    background-color:aquamarine;
-    margin:5px;
-
+    background-color:#f3f3f3;
+    margin:20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 5px rgba(184, 182, 182, 0.4);
 }
 
-.teacher-card img{
-    width: 100%;
-    height: 100%;
+.teacher-card:hover{
+    box-shadow: 0px 0px 10px 5px rgba(255, 184, 0, 0.5);
+}
+
+.container1{
+    height:120px;
+    width: 120px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.container1 img{
+    height:100%;
+    width:100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.container2{
+    padding:10px 0px 10px 0px;
+    display: flex;
+    flex-direction: column;
+    height: 80px;
+    width:250px;
+    justify-content: space-evenly;
+    align-items:center;
+    overflow-y:hidden;
+}
+.container2 p{
+    font-size: 12px;
+    font-weight: bold;
 }
