--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -61,11 +61,14 @@ ul{
 .logo{
     width:25%;
     display:flex;
+    height:60px;
     justify-content: center;
     align-items: center;
 }
+
 .logo img{
-    height: 100%;
+    height: 55px;
+    padding-top: 5px;
 }
 
 .menu-items{
