--- a/frontend/src/components/css/Contact.css
+++ b/frontend/src/components/css/Contact.css
@@ -24,14 +24,14 @@
     margin-top: 1%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 .container .second-child .address{
     display:flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 30%;
+    width: 20%;
     background-color:#f3f3f3;
     margin:20px;
     border-radius: 5px;
@@ -47,7 +47,7 @@
     justify-content: flex-start;
     align-items: center;
     height: 305px;
-    width: 30%;
+    width: 20%;
     background-color:#f3f3f3;
     margin:20px;
     border-radius: 5px;
@@ -62,7 +62,7 @@
     justify-content: flex-start;
     align-items: center;
     height: 305px;
-    width: 30%;
+    width: 20%;
     background-color:#f3f3f3;
     margin:20px;
     border-radius: 5px;
@@ -90,17 +90,20 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    margin-bottom: 5%;
+    background-color: #f3f3f3;
+    padding-bottom: 60px;
 }
 
 .container .Contact-Map .form{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: center;
 }
 
 .container .Contact-Map .map{
     display: flex;
+    padding-bottom: 30px;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
