--- a/frontend/src/components/css/Footer.css
+++ b/frontend/src/components/css/Footer.css
@@ -22,7 +22,8 @@
     height:50%;
     border-radius: 15px;
     padding-left: 15px;
-    border: none;
+    font-size: 20px;
+    border: 3px solid rgba(5, 18, 161, 0.571);;
     margin: 10px;
 }
 .attached-top-footer button{
