--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -114,5 +114,12 @@ ul{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+}
+.courses-menu .items-menu div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 10px;
+    background-color: #e3e3e3;
 }
