--- a/frontend/src/components/css/Home.css
+++ b/frontend/src/components/css/Home.css
@@ -1,17 +1,74 @@
-
-
-.Principle-Notes .Aphostrophe{
-    content: "“";
-    font-size: 100px;
-    color: rgb(6, 127, 248);
-    font-family: "Times New Roman", Times, serif;
-    font-weight: 900;
-    line-height: 1;
-    display: block;
-    height: 0.6em;
+.Home-Cointainer img{
+    width: 100%;
+    height: 880px;
 }
-.Photo img{
-    height: 100px;
-    width: 100px;
-    margin: 100px;
-}
+.principal-container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-gap: 30px;
+    padding: 50px;
+    background-color: #f5f5f5;
+    border-radius: 20px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  }
+  
+  .principal-image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px 0 0 20px;
+    overflow: hidden;
+  }
+  
+  .principal-image {
+    width: 100%;
+    max-width: 400px;
+    border-radius: 20px 0 0 20px;
+    transform: scale(1.1);
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .principal-image:hover {
+    transform: scale(1.2);
+  }
+  
+  .principal-notes-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #ffffff;
+    border-radius: 0 20px 20px 0;
+    padding: 40px;
+    position: relative;
+  }
+  
+  .principal-title {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
+  
+  .principal-notes {
+    font-size: 18px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+  .read-more-link {
+    position: absolute;
+    bottom: 40px;
+    right: 40px;
+    padding: 10px 20px;
+    border-radius: 30px;
+    background-color: #bba6ff;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    transition: background-color 0.3s ease-in-out;
+  }
+  
+  .read-more-link:hover {
+    background-color: #8d6aff;
+  }
+   
