--- a/frontend/src/components/css/Home.css
+++ b/frontend/src/components/css/Home.css
@@ -1,14 +1,15 @@
 .Home-Cointainer img{
     width: 100%;
-    height: 880px;
+    height: 680px;
 }
 .principal-container {
+    height: 50%;
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-gap: 30px;
     padding: 50px;
     background-color: #f5f5f5;
-    border-radius: 20px;
+
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
   }
   
