--- a/frontend/src/components/layouts/css/PamperCard.css
+++ b/frontend/src/components/layouts/css/PamperCard.css
@@ -1,14 +1,25 @@
 .pampercard{
-    background:#f3f3f3;
+    padding-top: 20px;
     height: 60vh;
     width: 100%;
     justify-content: center;
     align-items: center;
     position: relative;
-}
-.pampercard-details{
     background-repeat: no-repeat;
     background-size:cover;
+    position: relative;
+    z-index: 4;
+}
+.blacklayer{
+    position: absolute;
+    top:0;
+    left:0;
+    background: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    height:100%;
+    z-index: 1;
+}
+.pampercard-details{
     margin: auto;
     width: 50%;
     height:80%;
@@ -16,8 +27,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
-
+.pampercard-details h1{
+    color: #fff;
+}
+.pampercard-details p{
+    color: #fff;
+}
 .current-pamper-card{
     margin:15px 0px 0px 50px;
+}
+
+.white-color{
+    color: white;
 }
