--- a/frontend/src/components/css/Navbar.css
+++ b/frontend/src/components/css/Navbar.css
@@ -1,136 +1,180 @@
-p{
-    display: inline;
-    color: #003566;
-    font-size: 15px;
+p {
+  display: inline;
+  color: #003566;
+  font-size: 15px;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
-.navbar{
-    position: sticky;
-    top:0px;
-    z-index: 10;
-}
-
-.hovering-board{
-    display: flex;
-    justify-content: space-between;
-    background-color: #003566;
-    width: 100%;
-    height: 35px;
-}
-.hovering-board p{
-    color: white;
-}
-.hovering-board-first{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 100px;
+.navbar {
+  position: sticky;
+  top: 0px;
+  z-index: 10;
 }
 
-.hovering-board-first p{
-    margin:3px;
+.hovering-board {
+  display: flex;
+  justify-content: space-between;
+  background-color: #003566;
+  width: 100%;
+  height: 35px;
+}
+.hovering-board p {
+  color: white;
+}
+.hovering-board-first {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 100px;
 }
 
-.hovering-board-second{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-right: 200px;
+.hovering-board-first p {
+  margin: 3px;
 }
 
-.hovering-board-second p{
-    margin:3px;
-}
-.hovering-board-second a{
-    margin:10px;
-}
-
-.actual-navbar{
-    display: flex;
-    height:60px;
-    background-image: linear-gradient(to right,#fff,#e3e4e8);
-
+.hovering-board-second {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-right: 200px;
 }
 
-.logo{
-    width:25%;
-    display:flex;
-    height:60px;
-    justify-content: center;
-    align-items: center;
+.hovering-board-second p {
+  margin: 3px;
+}
+.hovering-board-second a {
+  margin: 10px;
 }
 
-.logo img{
-    height: 55px;
-    padding-top: 5px;
+.actual-navbar {
+  display: flex;
+  height: 60px;
+  background-image: linear-gradient(to right, #fff, #e3e4e8);
 }
 
-.menu-items{
-    width:50%;
+.logo {
+  width: 25%;
+  display: flex;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
 }
 
-.menu-items ul{
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
+.logo img {
+  height: 55px;
+  padding-top: 5px;
 }
 
-.actual-navbar .form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 20px;
-    width:25%
+.menu-items {
+  width: 50%;
 }
 
-.form .admission-form{
-    background-color: #ffb800;
-    height:50%;
-    width:50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 10px;
+.menu-items ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+.menu-items ul li {
+  transition: all 0.7s ease-in-out;
 }
 
-.courses-menu{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-    margin-top: -17px;
-    height: 100%;
-    width: 100%;
-}
-.courses-menu .items-menu{
-    background-color: #e3e4e8;
-    width: 120%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 3px;
-}
-.courses-menu .items-menu div{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 10px;
-    background-color: #e3e3e3;
-}
-.courses-menu .items-menu div a{
-    text-align: center;
-    width: 100%;
+.icon {
+    display: none;
+  }
+  .toggle {
+    float: right;
+    margin: 20px;
+    color: #EEE;
+    font-size: 30px;
+    border: 1px solid #EEE;
+    padding: 0px 5px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  @media (max-width: 1309px) {
+    .icon {
+      display: block;
+      width: 100%;
+      height: 80px;
+      background-color: #111;
+      border-bottom: 1px solid #444;
+    }
+    .menu-items {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      position: relative;
+      top: -4px;
+      background-color: #222;
+      display: none;
+    }
+    .menu-items li {
+      text-align: center;
+      display: block;
+      border-bottom: 1px solid #333;
+      float: none;
+    }
+  }  
+  @media (max-width: 1309px) {
+    .navbar ul{
+        
+    }
+  }
+.actual-navbar .form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+  width: 25%;
 }
 
-.courses-menu .items-menu div:nth-child(2) a{
-    padding-left: 20px;
+.form .admission-form {
+  background-color: #ffb800;
+  height: 50%;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+}
+
+.courses-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-top: -17px;
+  height: 100%;
+  width: 100%;
+}
+.courses-menu .items-menu {
+  background-color: #e3e4e8;
+  width: 120%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 3px;
+}
+.courses-menu .items-menu div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+  background-color: #e3e3e3;
+}
+.courses-menu .items-menu div a {
+  text-align: center;
+  width: 100%;
+}
+
+.courses-menu .items-menu div:nth-child(2) a {
+  padding-left: 20px;
 }
